middleware added to routes and doc updated
