# src/api/users/manage-user/router.js
@@ -5,9 +5,9 @@ const { update_profile,search_by_email,search_by_cont_no, get_all_user, delete_a
 
 const manage_router = require("express").Router();
 
-manage_router.post("/user/profile/update/:email",update_profile);
-manage_router.get("/user/search/email/:email",search_by_email);
-manage_router.get("/user/list", get_all_user);
-manage_router.delete("/user/delete/all",delete_all_user);
-manage_router.get("/user/search/contno/:cont_no",search_by_cont_no);
-module.exports = manage_router;
+manage_router.post("/user/profile/update/:email",authenticator,update_profile);
+manage_router.get("/user/search/email/:email",authenticator,search_by_email);
+manage_router.get("/user/list", authenticator,get_all_user);
+manage_router.delete("/user/delete/all",authenticator,delete_all_user);
+manage_router.get("/user/search/contno/:cont_no",authenticator,search_by_cont_no);
+module.exports = manage_router; 
